# schnorrkel-js

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  pack-node.sh  package.json  pre-publish.sh
src/: lib.rs  wrapper.rs
src/js/: crypto-polyfill.js  index.d.ts  index.js
test/: _test.js  all.js  asm.js  jest.spec.js  wasm.js
