# also bump version in package.json (major.minor.patch reflects upstream,
# the sub-identifier indicated the version of the changes made)

[package]
name = "schnorrkel-js"
version = "0.2.0-2"
authors = ["kianenigma <Kian.peymani@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
wasm-bindgen-test = { version = "0.2" }
wee_alloc = { version = "0.4.3" }
sha2 = { version = "0.8"}
schnorrkel = { version = "0.0", features = ["nightly"]}

[dev-dependencies]
hex-literal = { version = "0.1.4" }
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[profile.release]
lto = true
