# also bump version in package.json (major.minor.patch reflects upstream,
# the sub-identifier indicated the version of the changes made)

[package]
name = "schnorrkel-js"
version = "0.2.0-10"
authors = ["kianenigma <Kian.peymani@gmail.com>", "Jaco Greeff <jacogr@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
wee_alloc = { version = "0.4.3" }
# schnorrkel = { version = "0.0", features = ["nightly"]}
schnorrkel = { git = "https://github.com/w3f/schnorrkel", rev = "0a0de4294b475ef6abdeebb50067f213ca79b3c7", features = ["nightly"] }

[dev-dependencies]
hex-literal = { version = "0.1.4" }
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[profile.release]
lto = true
